--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,13 @@
 .status-input{
     width: calc((100% - 20px));
 }
+
+div.pl-hidden {
+    display: none;
+}
+
+div.pl-visible {
+    border-width: 2px;
+    border-style: solid;
+    border-color: gray;
+}
